filmdb-compose 2.1 - irudi aldaketak eta optimizazioa

--- a/docker/app/develop/Dockerfile.dev
+++ b/docker/app/develop/Dockerfile.dev
@@ -1,8 +1,7 @@
 FROM python:latest
 
-# remove this when uwsgi is required 
 # # This prevents Python from writing out pyc files
-# ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONDONTWRITEBYTECODE=1
 # # This keeps Python from buffering stdin/stdout
 
 ENV PYTHONUNBUFFERED=1
