--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,11 +1,4 @@
-FROM nginx:latest
+FROM nginx:1.23.3-alpine-slim
 
 RUN rm -rf /etc/nginx/user.conf.d/*
-COPY conf.d/nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 8080
-
-# FROM nginxproxy/nginx-proxy:0.9.1-alpine
-
-# RUN rm -rf /etc/nginx/user.conf.d/*
-# COPY conf.d/nginx.conf /etc/nginx/conf.d/default.conf
+COPY conf.d/nginx.conf /etc/nginx/conf.d/nginx.conf
