filmdb-compose 2.2 - gunicorni ipa kendu eta Dockerfileak berizendatu

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
   web-prod:
     build:
       context: .
-      dockerfile: ./docker/app/production/Dockerfile.prod
-    command: sh -c "cd src/filmdb && gunicorn filmdb.wsgi:application --bind 172.21.0.3:80"
+      dockerfile: ./docker/app/production/Dockerfile
+    command: sh -c "cd src/filmdb && gunicorn filmdb.wsgi:application --bind web-prod:80"
     depends_on:
       db:
         condition: service_started
@@ -40,7 +40,7 @@ services:
   web-dev:
     build:
       context: .
-      dockerfile: ./docker/app/develop/Dockerfile.dev
+      dockerfile: ./docker/app/develop/Dockerfile
     command: >
       python bin/manage.py runserver 0.0.0.0:8090
     ports:
